crates/hir-ty/tests/snapshots/jls_definite_assignment__compound_reads_first.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 105
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    void m() {
        int x;
        x += 1;
    }
}

method m(): void
  locals: l0: int
  exprs: e0: <error> | e1: int | e2: <error>
  diags: e0@5:8: variable-might-not-have-been-initialized: variable 'x' might not have been initialized
