crates/hir-ty/tests/snapshots/jls_definite_assignment__for_no_cond_break_after_loop_statement.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 653
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    void m(int n) {
        int k;
        for (;;) {
            k = n;
            if (k >= 5) continue;
            if (k <= 3) break;
            k = n - 1;
            break;
        }
        int y = k;
    }
}

method m(int): void
  locals: l0: int | l1: int | l2: int
  exprs: e0: int | e1: int | e2: int | e3: int | e4: int | e5: boolean | e6: boolean | e7: int | e8: int | e9: boolean | e10: boolean | e11: int | e12: int | e13: int | e14: int | e15: int | e16: int
