crates/hir-ty/tests/snapshots/jls_definite_assignment__for_no_cond_break_carries_assignment.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 485
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int m(int n) {
        int k;
        for (;;) {
            k = n;
            if (k >= 5) break;
        }
        return k;
    }
}

method m(int): int
  locals: l0: int | l1: int
  exprs: e0: int | e1: int | e2: int | e3: int | e4: int | e5: boolean | e6: boolean | e7: int
